Switch scenarioIds to LinkedHashMap